# SGE

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  SGE.hpp  SGE_STRUCTURE.hpp  SGE_gen.sh  build_all_examples.sh  build_collision_phase.sh  build_dev.sh  build_examples.sh  build_pong.sh  build_scenes.sh  build_sfx.sh  build_state.sh  build_ui.sh  main  main.cpp  makefile  universe.cpp  universe.h
examples/_common/: AABBInteraction.h  CameraView.h  CustomEntities.h  KeyboardController.h  Map.h  PlayerStates.h  PlayerSurfaceInteraction.h
examples/collision_phase/: CMakeLists.txt  README.md  collision_phase.cpp
examples/dev/: BoxSurfaceInteraction.h  CMakeLists.txt  MapController.h  PushInteraction.h  README.md  dev.cpp
examples/pong/: CMakeLists.txt  README.md  pong.cpp
examples/scenes/: CMakeLists.txt  README.md  SetupLevel1Scene.h  SetupLevel2Scene.h  scenes.cpp
examples/sfx/: CMakeLists.txt  (+2 more)
map/: testMap.tsx
src/: Animation.cpp  Animation.h  Collision.h  CollisionDetectionAlgorithms.h  CollisionGroup.h  CollisionGroupType.h  CollisionManager.cpp  CollisionManager.h  CollisionPair.h  CollisionResponses.h  CollisionUtils.h  ContinuousAction.h  Entity.cpp  Entity.h  Gravity.cpp  Gravity.h  Moveable.cpp  Moveable.h  PhysicalObject.cpp  PhysicalObject.h  PhysicalObjectPositionData.h  PhysicalProperty.h  PhysicsManager.cpp  PhysicsManager.h  SolidObject.cpp  SolidObject.h  Spritesheet.cpp  Spritesheet.h  TextureManager.cpp  TextureManager.h  TextureSheet.cpp  TextureSheet.h  Universe.cpp  Universe.h  main.cpp  tileson.hpp  universe.cpp  universe.h
(+284 files in other folders)
